arreglado problema de traduccion para la pagina, e implementado algunas traducciones

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portafolio de Luis Álvarez</title>
+    <link rel="icon" href="/public/assets/icons/LA.svg">
 </head>
 <body>
     <div id="root"></div>
