--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portafolio de Luis Álvarez</title>
-    <link rel="icon" href="/assets/icons/LA-red.svg">
+    <link rel="icon" href="https://raw.githubusercontent.com/luis-alvarezf10/portafolio-personal/main/public/assets/icons/LA-red.svg">
 </head>
 <body>
     <div id="root"></div>
